--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
         }
 
         .logo h1 {
-            color: white;
+            color: black;
             font-size: 2rem;
             font-weight: 700;
         }
@@ -983,4 +983,5 @@
         window.selectTopic = selectTopic;
     </script>
 </body>
+
 </html>
