--- a/register.html
+++ b/register.html
@@ -87,7 +87,7 @@
         }
 
         .form-title {
-            text-align: center;
+            text-align: left;
             color: #333;
             font-size: 2.5rem;
             margin-bottom: 2rem;
@@ -985,3 +985,4 @@
 </body>
 
 </html>
+
