--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Registration - College Fest</title>
+    <title>Student Registration - College fest</title>
     <style>
         /* Reset and base styles */
         * {
@@ -985,4 +985,5 @@
 </body>
 
 </html>
+
 
